--- a/RoC_Analysis_SVM.ipynb
+++ b/RoC_Analysis_SVM.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "SVC(kernel='linear', probability=True)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -695,14 +695,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "def get_fpr_tpr(clf_model, X_test, y_test, threshold=0.5):\n",
+    "def get_fpr_tpr(clf_model, X_test, y_test):\n",
     "    \"\"\"\n",
     "    Calculates the False Positive Rate (FPR) and True Positive Rate (TPR) at a given threshold.\n",
     "\n",
@@ -1395,7 +1395,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.885803819544508 0.9999995130307682\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate the decision function out of each model and print its max and min\n",
+    "min_Z = np.zeros(len(minority_class_weight))\n",
+    "max_Z = np.zeros(len(minority_class_weight))\n",
+    "for i, w in enumerate(minority_class_weight):\n",
+    "    Z = dict_weighted_clfs[w][\"model\"].decision_function(X_test)\n",
+    "    min_Z[i] = np.min(Z)\n",
+    "    max_Z[i] = np.max(Z)\n",
+    "print(np.min(min_Z), np.max(min_Z))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,37 +1428,63 @@
     "import multiprocessing as mp\n",
     "from functools import partial\n",
     "\n",
-    "def process_intercept(intercept, dict_weighted_clfs, minority_class_weight, X_test, y_test):\n",
-    "    # Create a deep copy for this process\n",
-    "    dict_weighted_clfs_copy = copy.deepcopy(dict_weighted_clfs)\n",
-    "    \n",
+    "\n",
+    "def process_intercept(threshold, dict_weighted_clfs, minority_class_weight, X_test, y_test):\n",
+    "    results_for_intercept = {}\n",
     "    for w in minority_class_weight:\n",
-    "        dict_weighted_clfs_copy[w][\"model\"].intercept_[0] = intercept\n",
-    "        result = get_fpr_tpr(dict_weighted_clfs_copy[w][\"model\"], X_test, y_test, threshold=0.5)\n",
-    "        dict_weighted_clfs_copy[w][\"fpr\"] = result[\"fpr\"]\n",
-    "        dict_weighted_clfs_copy[w][\"tpr\"] = result[\"tpr\"]\n",
-    "        # Calculate distance from (0,1) to (fpr, tpr)\n",
-    "        distance = np.sqrt((result[\"fpr\"] - 0)**2 + (result[\"tpr\"] - 1)**2)\n",
-    "        dict_weighted_clfs_copy[w][\"distance\"] = distance\n",
-    "    \n",
-    "    # Take dict_weighted_clfs_copy with minimum distance\n",
-    "    min_distance = min([dict_weighted_clfs_copy[w][\"distance\"] for w in minority_class_weight])\n",
-    "    min_distance_weight = [w for w in minority_class_weight if dict_weighted_clfs_copy[w][\"distance\"] == min_distance]\n",
-    "    \n",
+    "        # Deep copy ONLY the model being modified for this weight w\n",
+    "        model_copy = copy.deepcopy(dict_weighted_clfs[w][\"model\"]) \n",
+    "        # calculate the new intercept\n",
+    "        intercept = dict_weighted_clfs[w][\"model\"].intercept_[0] - threshold\n",
+    "        # Modify the intercept of the copy\n",
+    "        try:\n",
+    "            model_copy.intercept_[0] = intercept\n",
+    "        except (AttributeError, IndexError, TypeError) as e:\n",
+    "            print(f\"Warning: Could not set intercept for weight {w}, intercept {intercept}. Error: {e}\")\n",
+    "            continue # Skip this model/intercept combo if setting fails\n",
+    "\n",
+    "        \n",
+    "        metrics = get_fpr_tpr(model_copy, X_test, y_test) \n",
+    "\n",
+    "        if metrics: # Check if metrics calculation was successful\n",
+    "            distance = np.sqrt((metrics[\"fpr\"] - 0)**2 + (metrics[\"tpr\"] - 1)**2)\n",
+    "            results_for_intercept[w] = {\n",
+    "                \"model\": model_copy, # Store the modified model if needed, or just parameters\n",
+    "                \"metrics\": metrics,\n",
+    "                \"distance\": distance,\n",
+    "                \"fpr\": metrics[\"fpr\"],\n",
+    "                \"tpr\": metrics[\"tpr\"],\n",
+    "                \"precision\": metrics[\"precision\"],\n",
+    "                \"recall\": metrics[\"recall\"]\n",
+    "            }\n",
+    "\n",
+    "    # Check if any results were generated for this intercept\n",
+    "    if not results_for_intercept:\n",
+    "        return (intercept, None) # Indicate failure for this intercept\n",
+    "\n",
+    "    # Find the minimum distance among weights for this intercept\n",
+    "    min_distance = min(res[\"distance\"] for res in results_for_intercept.values())\n",
+    "    min_distance_weights = [w for w, res in results_for_intercept.items() if res[\"distance\"] == min_distance]\n",
+    "\n",
+    "    # Handle ties (here, just taking the first one)\n",
+    "    best_w = min_distance_weights[0] \n",
+    "\n",
+    "    # Return the relevant info for the best weight found for THIS intercept\n",
     "    return (intercept, {\n",
-    "        \"model\": dict_weighted_clfs_copy[min_distance_weight[0]][\"model\"],\n",
-    "        \"fpr\": dict_weighted_clfs_copy[min_distance_weight[0]][\"fpr\"],\n",
-    "        \"tpr\": dict_weighted_clfs_copy[min_distance_weight[0]][\"tpr\"],\n",
-    "        \"precision\": dict_weighted_clfs_copy[min_distance_weight[0]][\"precision\"],\n",
-    "        \"recall\": dict_weighted_clfs_copy[min_distance_weight[0]][\"recall\"],\n",
-    "        \"f1\": dict_weighted_clfs_copy[min_distance_weight[0]][\"f1\"],\n",
-    "        \"accuracy\": dict_weighted_clfs_copy[min_distance_weight[0]][\"accuracy\"],\n",
-    "        \"misclassification_rate\": dict_weighted_clfs_copy[min_distance_weight[0]][\"misclassification_rate\"]\n",
+    "        # Decide if you need the whole model object or just its state/parameters\n",
+    "        # Returning the whole object can be slow due to serialization\n",
+    "        \"best_weight\": best_w, \n",
+    "        # \"model_state\": model_to_state(results_for_intercept[best_w][\"model\"]), # Example\n",
+    "        \"metrics\": results_for_intercept[best_w][\"metrics\"],\n",
+    "        \"distance\": results_for_intercept[best_w][\"distance\"],\n",
+    "        \"fpr\": results_for_intercept[best_w][\"fpr\"],\n",
+    "        \"tpr\": results_for_intercept[best_w][\"tpr\"],\n",
+    "        \"precision\": results_for_intercept[best_w][\"precision\"],\n",
+    "        \"recall\": results_for_intercept[best_w][\"recall\"]\n",
     "    })\n",
     "\n",
     "# Main code\n",
-    "intercept_limit = 100\n",
-    "var_interrupt = np.arange(-intercept_limit, intercept_limit, 1)\n",
+    "threshold = np.arange(-2, 1, 0.1)\n",
     "dict_intercept_clfs = {}\n",
     "\n",
     "# Create a partial function with fixed arguments\n",
@@ -1448,7 +1498,7 @@
     "num_cores = 10\n",
     "with mp.Pool(processes=num_cores) as pool:\n",
     "    # Map the function to all intercept values and process in parallel\n",
-    "    results = pool.map(process_func, var_interrupt)\n",
+    "    results = pool.map(process_func, threshold)\n",
     "\n",
     "# Convert results list to dictionary\n",
     "dict_intercept_clfs = dict(results)"
@@ -1456,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1539,16 +1589,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "200"
+       "30"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1618,7 @@
        "(np.float64(0.15053763440860216), np.float64(0.15053763440860216))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1638,7 @@
        "(np.float64(0.4485981308411215), np.float64(0.4485981308411215))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
