Pneumonia: Minor update

--- a/medMNIST_lightning_oversample.ipynb
+++ b/medMNIST_lightning_oversample.ipynb
@@ -101,13 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Original positive samples (pneumonia): 3494\n",
+      "Original negative samples (normal): 1214\n",
       "Original dataset size: 4708\n",
       "New dataset size: 1219\n",
       "------------------------------\n",
