--- a/Logistic_data1_test.ipynb
+++ b/Logistic_data1_test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "7c24af30",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "17123a7e",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "a8c3deb3",
    "metadata": {},
    "outputs": [],
@@ -258,8 +258,62 @@
     "        print(f\"Training data shape: {X_train.shape}, {y_train.shape}\")\n",
     "        print(f\"Test data shape: {X_test.shape}, {y_test.shape}\")\n",
     "    elif dataset == \"data2\":\n",
-    "        # Similar data generation process for data2\n",
-    "        pass\n",
+    "        no_predictors = 2\n",
+    "        no_samples = 1000\n",
+    "        no_classes = 2\n",
+    "        #kerneltype = 'linear'  #comment out for polynomial kernel\n",
+    "        #kerneltype = 'poly'  #comment out for linear kernel\n",
+    "\n",
+    "\n",
+    "\n",
+    "        n_samples_per_cluster = 250\n",
+    "        n_clusters = 4\n",
+    "\n",
+    "        # Create the clusters deterministically\n",
+    "        np.random.seed(0) # for reproducibility\n",
+    "\n",
+    "        X = np.zeros((n_samples_per_cluster * n_clusters, 2))\n",
+    "        y = np.zeros(n_samples_per_cluster * n_clusters)\n",
+    "\n",
+    "        # Cluster centers in corners of a square\n",
+    "        centers = [[0, 0], [2, 0], [1, 2], [1, 2]]\n",
+    "\n",
+    "        # Assign points to clusters deterministically\n",
+    "        for i in range(n_clusters):\n",
+    "            cluster_indices = slice(i * n_samples_per_cluster, (i + 1) * n_samples_per_cluster)\n",
+    "            X[cluster_indices] = centers[i] + np.random.normal(scale=0.5, size=(n_samples_per_cluster, 2))\n",
+    "            if i == 0 or i == 3:\n",
+    "                y[cluster_indices] = 0\n",
+    "            else:\n",
+    "                y[cluster_indices] = 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "        #Visualize\n",
+    "        plt.figure(figsize=(8,8))\n",
+    "        plt.scatter(X[:,0], X[:,1], c=y, cmap='viridis', s=50)\n",
+    "        plt.title('Four Clusters of Equal Size')\n",
+    "        plt.xlabel('Feature 1')\n",
+    "        plt.ylabel('Feature 2')\n",
+    "        plt.show()\n",
+    "\n",
+    "        #add intercept to X\n",
+    "        #X = np.hstack((np.ones((X.shape[0], 1)), X))\n",
+    "\n",
+    "        # # shuffle data\n",
+    "        # permutation = np.random.permutation(no_samples)\n",
+    "        # X = X[permutation]\n",
+    "        # y = y[permutation]\n",
+    "\n",
+    "\n",
+    "        #Split data into training and testing sets\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "        train_data = np.concatenate((X_train, y_train.reshape(-1, 1)), axis=1)\n",
+    "        test_data = np.concatenate((X_test, y_test.reshape(-1, 1)), axis=1)\n",
+    "        val_data = test_data\n",
+    "        \n",
+    "        print(f\"Training data shape: {X_train.shape}, {y_train.shape}\")\n",
+    "        print(f\"Test data shape: {X_test.shape}, {y_test.shape}\")\n",
     "\n",
     "    return train_data, test_data, val_data\n"
    ]
@@ -274,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "af73be24",
    "metadata": {},
    "outputs": [],
@@ -328,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "a060ccc6",
    "metadata": {},
    "outputs": [
@@ -384,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "83d23d6e",
    "metadata": {},
    "outputs": [],
@@ -417,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "a2787fca",
    "metadata": {},
    "outputs": [
@@ -438,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "id": "d77ee047",
    "metadata": {},
    "outputs": [
