NN MNIST: Bugs to be fixed

--- a/NN_lightning_data1_oversampling.ipynb
+++ b/NN_lightning_data1_oversampling.ipynb
@@ -652,9 +652,7 @@
       "Using 16bit Automatic Mixed Precision (AMP)\n",
       "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "/home/kartik/anaconda3/envs/MLlabs/lib/python3.12/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:654: Checkpoint directory /home/kartik/Documents/Stage ENSAI/RoC_Analysis/checkpoints exists and is not empty.\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
+      "HPU available: False, using: 0 HPUs\n"
      ]
     },
     {
@@ -668,6 +666,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/katzkid/miniforge3/envs/MLlabs/lib/python3.12/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:654: Checkpoint directory /home/katzkid/Documents/RoC_Analysis/checkpoints exists and is not empty.\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0,1]\n",
       "\n",
       "  | Name           | Type              | Params | Mode \n",
       "-------------------------------------------------------------\n",
@@ -683,54 +683,66 @@
       "0.001     Total estimated model params size (MB)\n",
       "9         Modules in train mode\n",
       "0         Modules in eval mode\n",
-      "/home/kartik/anaconda3/envs/MLlabs/lib/python3.12/site-packages/pytorch_lightning/loops/fit_loop.py:310: The number of training batches (16) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
+      "/home/katzkid/miniforge3/envs/MLlabs/lib/python3.12/site-packages/pytorch_lightning/loops/fit_loop.py:310: The number of training batches (16) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2d48e289fabc48709a153370823ec14f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: |          | 0/? [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=1` reached.\n",
+      "Restoring states from the checkpoint path at /home/katzkid/Documents/RoC_Analysis/checkpoints/simple-clf-epoch=00-v27.ckpt\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0,1]\n",
+      "Loaded model weights from the checkpoint at /home/katzkid/Documents/RoC_Analysis/checkpoints/simple-clf-epoch=00-v27.ckpt\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 100%|██████████| 16/16 [00:00<00:00, 55.07it/s, v_num=13]"
+      "Best model from Phase 1 saved to: /home/katzkid/Documents/RoC_Analysis/checkpoints/simple-clf-epoch=00-v27.ckpt\n",
+      "\n",
+      "--- Testing model from Phase 1 checkpoint: /home/katzkid/Documents/RoC_Analysis/checkpoints/simple-clf-epoch=00-v27.ckpt ---\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=1` reached.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0: 100%|██████████| 16/16 [00:00<00:00, 53.89it/s, v_num=13]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Restoring states from the checkpoint path at /home/kartik/Documents/Stage ENSAI/RoC_Analysis/checkpoints/simple-clf-epoch=00-v12.ckpt\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "Loaded model weights from the checkpoint at /home/kartik/Documents/Stage ENSAI/RoC_Analysis/checkpoints/simple-clf-epoch=00-v12.ckpt\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a7804bfd762d4f7db96e81517599e63f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing: |          | 0/? [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Best model from Phase 1 saved to: /home/kartik/Documents/Stage ENSAI/RoC_Analysis/checkpoints/simple-clf-epoch=00-v12.ckpt\n",
-      "\n",
-      "--- Testing model from Phase 1 checkpoint: /home/kartik/Documents/Stage ENSAI/RoC_Analysis/checkpoints/simple-clf-epoch=00-v12.ckpt ---\n",
-      "Testing DataLoader 0: 100%|██████████| 10/10 [00:00<00:00, 264.55it/s]\n",
       "--- Final Classifier Test Metrics ---\n",
       "Accuracy: 0.4683\n",
       "AUC: 0.4458\n",
       "-------------------------------------\n",
       "\n",
-      "Testing DataLoader 0: 100%|██████████| 10/10 [00:00<00:00, 113.47it/s]\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
       "       Test metric             DataLoader 0\n",
       "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
@@ -1038,10 +1050,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "19d1bd7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Seed set to 42\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Starting Fold 1/4 ---\n",
+      "INFO: Initial C0=500, C1=500, Ratio(0/1): 1.0\n",
+      "INFO: Target ratios (w values): [  0.1          0.1023293    0.10471285   0.10715193   0.10964782\n",
+      "   0.11220185   0.11481536   0.11748976   0.12022644   0.12302688\n",
+      "   0.12589254   0.12882496   0.13182567   0.13489629   0.13803843\n",
+      "   0.14125375   0.14454398   0.14791084   0.15135612   0.15488166\n",
+      "   0.15848932   0.16218101   0.16595869   0.16982437   0.17378008\n",
+      "   0.17782794   0.18197009   0.18620871   0.19054607   0.19498446\n",
+      "   0.19952623   0.20417379   0.20892961   0.21379621   0.21877616\n",
+      "   0.22387211   0.22908677   0.23442288   0.23988329   0.24547089\n",
+      "   0.25118864   0.25703958   0.2630268    0.26915348   0.27542287\n",
+      "   0.28183829   0.28840315   0.29512092   0.30199517   0.30902954\n",
+      "   0.31622777   0.32359366   0.33113112   0.33884416   0.34673685\n",
+      "   0.35481339   0.36307805   0.37153523   0.3801894    0.38904514\n",
+      "   0.39810717   0.40738028   0.41686938   0.42657952   0.43651583\n",
+      "   0.44668359   0.45708819   0.46773514   0.47863009   0.48977882\n",
+      "   0.50118723   0.51286138   0.52480746   0.5370318    0.54954087\n",
+      "   0.56234133   0.57543994   0.58884366   0.60255959   0.616595\n",
+      "   0.63095734   0.64565423   0.66069345   0.67608298   0.69183097\n",
+      "   0.70794578   0.72443596   0.74131024   0.75857758   0.77624712\n",
+      "   0.79432823   0.81283052   0.83176377   0.85113804   0.87096359\n",
+      "   0.89125094   0.91201084   0.9332543    0.95499259   0.97723722\n",
+      "   1.           1.04761575   1.09749877   1.149757     1.20450354\n",
+      "   1.26185688   1.32194115   1.38488637   1.45082878   1.51991108\n",
+      "   1.59228279   1.66810054   1.7475284    1.83073828   1.91791026\n",
+      "   2.009233     2.10490414   2.20513074   2.3101297    2.42012826\n",
+      "   2.53536449   2.65608778   2.7825594    2.91505306   3.05385551\n",
+      "   3.19926714   3.35160265   3.51119173   3.67837977   3.85352859\n",
+      "   4.03701726   4.22924287   4.43062146   4.64158883   4.86260158\n",
+      "   5.09413801   5.33669923   5.59081018   5.85702082   6.13590727\n",
+      "   6.42807312   6.73415066   7.05480231   7.39072203   7.74263683\n",
+      "   8.11130831   8.49753436   8.90215085   9.32603347   9.77009957\n",
+      "  10.23531022  10.72267222  11.23324033  11.76811952  12.32846739\n",
+      "  12.91549665  13.53047775  14.17474163  14.84968262  15.55676144\n",
+      "  16.29750835  17.07352647  17.88649529  18.73817423  19.6304065\n",
+      "  20.56512308  21.5443469   22.5701972   23.64489413  24.77076356\n",
+      "  25.95024211  27.18588243  28.48035868  29.8364724   31.2571585\n",
+      "  32.74549163  34.30469286  35.93813664  37.64935807  39.44206059\n",
+      "  41.320124    43.28761281  45.34878508  47.50810162  49.77023564\n",
+      "  52.14008288  54.62277218  57.22367659  59.94842503  62.80291442\n",
+      "  65.79332247  68.92612104  72.20809018  75.64633276  79.24828984\n",
+      "  83.02175681  86.97490026  91.11627561  95.45484567 100.        ]\n",
+      "INFO: KDE-like perturbation sigma: 0.1\n",
+      "INFO: Standard deviation of synthetic samples will NOT be modified after generation.\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for tensor of dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 42\u001b[0m\n\u001b[1;32m     38\u001b[0m alpha_target_actual_values, Class0_initial, Class1_initial  \u001b[38;5;241m=\u001b[39m generate_ratios(train_data\u001b[38;5;241m=\u001b[39mtrain_data)  \u001b[38;5;66;03m# Combine features and labels for ratio generation\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m# --- Create datasets and dataloaders for the current fold ---\u001b[39;00m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m# FIX 2: Get the fold-specific data by indexing the original tensors\u001b[39;00m\n\u001b[0;32m---> 42\u001b[0m fold_train_features, fold_train_labels \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_data_tensor\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m[train_ids], train_data_tensor[:, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][train_ids]\n\u001b[1;32m     43\u001b[0m fold_val_features, fold_val_labels \u001b[38;5;241m=\u001b[39m train_data_tensor[:, :\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][val_ids], train_data_tensor[:, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][val_ids]\n\u001b[1;32m     45\u001b[0m \u001b[38;5;66;03m# Create the validation loader for this fold\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniforge3/envs/MLlabs/lib/python3.12/site-packages/torch/utils/data/dataset.py:211\u001b[0m, in \u001b[0;36mTensorDataset.__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m    210\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, index):\n\u001b[0;32m--> 211\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtensor\u001b[49m\u001b[43m[\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtensor\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensors\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniforge3/envs/MLlabs/lib/python3.12/site-packages/torch/utils/data/dataset.py:211\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    210\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, index):\n\u001b[0;32m--> 211\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mtuple\u001b[39m(\u001b[43mtensor\u001b[49m\u001b[43m[\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m tensor \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtensors)\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for tensor of dimension 1"
+     ]
+    }
+   ],
    "source": [
     "import pytorch_lightning as pl\n",
     "from pytorch_lightning.callbacks import ModelCheckpoint, TQDMProgressBar\n",
@@ -1075,17 +1158,31 @@
     "                      batch_size=BATCH_SIZE,\n",
     "                      sampler=train_subsampler,\n",
     "                      num_workers=NUM_WORKERS)\n",
-    "    val_loader = data.DataLoader(\n",
+    "    fold_loader = data.DataLoader(\n",
     "                    train_data_tensor,\n",
     "                    batch_size=BATCH_SIZE,\n",
     "                    sampler=val_subsampler,\n",
     "                    num_workers=NUM_WORKERS)\n",
     "    alpha_target_actual_values, Class0_initial, Class1_initial  = generate_ratios(train_data=train_data)  # Combine features and labels for ratio generation\n",
     "\n",
+    "    # --- Create datasets and dataloaders for the current fold ---\n",
+    "    # FIX 2: Get the fold-specific data by indexing the original tensors\n",
+    "    fold_train_features, fold_train_labels = train_data_tensor[:, :-1][train_ids], train_data_tensor[:, -1][train_ids]\n",
+    "    fold_val_features, fold_val_labels = train_data_tensor[:, :-1][val_ids], train_data_tensor[:, -1][val_ids]\n",
+    "\n",
+    "    # Create the validation loader for this fold\n",
+    "    fold_val_dataset = data.TensorDataset(fold_val_features, fold_val_labels)\n",
+    "    fold_loader = data.DataLoader(fold_val_dataset, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS)\n",
+    "\n",
+    "    # Create a temporary dataset for the generate_ratios function\n",
+    "    temp_train_dataset_for_ratios = data.TensorDataset(fold_train_features, fold_train_labels)\n",
+    "    alpha_target_actual_values, Class0_initial, Class1_initial = generate_ratios(train_data=temp_train_dataset_for_ratios)\n",
+    "\n",
+    "\n",
     "\n",
     "    for w_idx, w in enumerate(alpha_target_actual_values):\n",
     "        print(f\"\\n--- Processing target ratio w ({w_idx+1}/{len(alpha_target_actual_values)}): {w:.4f} ---\")\n",
-    "        X_train, y_train = oversample_dataset_KDE(Class0_initial, Class1_initial, w, train_data)\n",
+    "        X_train, y_train = oversample_dataset_KDE(Class0_initial, Class1_initial, w, train_data=temp_train_dataset_for_ratios.numpy())\n",
     "        # 1. Instantiate the LightningModule\n",
     "        model = LitClassifier(input_features=2, hidden_units=32, learning_rate=LEARNING_RATE)\n",
     "        \n",
@@ -1127,7 +1224,7 @@
     "\n",
     "        # 7. Test the model after each stage\n",
     "        print(f\"\\n--- Testing model after Fold {fold+1} Stage {w_idx+1} ---\")\n",
-    "        trainer.test(model, dataloaders=test_loader, ckpt_path=best_path_this_stage)\n",
+    "        trainer.test(model, dataloaders=fold_loader, ckpt_path=best_path_this_stage)\n",
     "        results_classifier = model.last_test_results.copy()\n",
     "        current_model = {\n",
     "            \"model\": model,\n",
@@ -1146,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e5d9c39d",
    "metadata": {},
    "outputs": [
@@ -1183,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "586c430f",
    "metadata": {},
    "outputs": [
@@ -1663,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "bae1a225",
    "metadata": {},
    "outputs": [
@@ -1706,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f504bde8",
    "metadata": {},
    "outputs": [],
