--- a/NN_lightning_data1_undersampling.ipynb
+++ b/NN_lightning_data1_undersampling.ipynb
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "19d1bd7c",
    "metadata": {},
    "outputs": [
@@ -17367,7 +17367,7 @@
     "                      batch_size=BATCH_SIZE,\n",
     "                      sampler=train_subsampler,\n",
     "                      num_workers=NUM_WORKERS)\n",
-    "    val_loader = data.DataLoader(\n",
+    "    fold_loader = data.DataLoader(\n",
     "                    train_data_tensor,\n",
     "                    batch_size=BATCH_SIZE,\n",
     "                    sampler=val_subsampler,\n",
@@ -17416,7 +17416,7 @@
     "\n",
     "        # 7. Test the model after each stage\n",
     "        print(f\"\\n--- Testing model after Fold {fold+1} Stage {i+1} ---\")\n",
-    "        trainer.test(model, dataloaders=test_loader, ckpt_path=best_path_this_stage)\n",
+    "        trainer.test(model, dataloaders=fold_loader, ckpt_path=best_path_this_stage)\n",
     "        results_classifier = model.last_test_results.copy()\n",
     "        current_model = {\n",
     "            \"model\": model,\n",
