--- a/NN_lightning_data1_weighted.ipynb
+++ b/NN_lightning_data1_weighted.ipynb
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "19d1bd7c",
    "metadata": {},
    "outputs": [
@@ -16985,6 +16985,8 @@
     "    list_weighted_clfs = [] # List to store the models trained at each stage\n",
     "    best_clfs = [] # List to store the best models from each stage\n",
     "    best_model_paths = [] # List to store the path of the best model from each stage\n",
+    "    # 1. Instantiate the LightningModule\n",
+    "    model = LitClassifier(input_features=2, hidden_units=32, learning_rate=LEARNING_RATE, pos_weight=pos_weight)\n",
     "    print(f\"--- Starting Fold {fold + 1}/{K_FOLDS} ---\")\n",
     "\n",
     "    # 4. Sample elements randomly from a given list of ids, no replacement.\n",
@@ -16996,7 +16998,7 @@
     "                      batch_size=BATCH_SIZE,\n",
     "                      sampler=train_subsampler,\n",
     "                      num_workers=NUM_WORKERS)\n",
-    "    val_loader = data.DataLoader(\n",
+    "    fold_loader = data.DataLoader(\n",
     "                    train_data_tensor,\n",
     "                    batch_size=BATCH_SIZE,\n",
     "                    sampler=val_subsampler,\n",
@@ -17004,8 +17006,7 @@
     "\n",
     "\n",
     "    for i, pos_weight in enumerate(pos_weights):\n",
-    "        # 1. Instantiate the LightningModule\n",
-    "        model = LitClassifier(input_features=2, hidden_units=32, learning_rate=LEARNING_RATE, pos_weight=pos_weight)\n",
+    "        \n",
     "        \n",
     "        checkpoint_callback = ModelCheckpoint(\n",
     "            every_n_epochs=1,                # Save model every epoch\n",
@@ -17045,7 +17046,7 @@
     "\n",
     "        # 7. Test the model after each stage\n",
     "        print(f\"\\n--- Testing model after Fold {fold+1} Stage {i+1} ---\")\n",
-    "        trainer.test(model, dataloaders=test_loader, ckpt_path=best_path_this_stage)\n",
+    "        trainer.test(model, dataloaders=fold_loader, ckpt_path=best_path_this_stage)\n",
     "        results_classifier = model.last_test_results.copy()\n",
     "        current_model = {\n",
     "            \"model\": model,\n",
