save results function

--- a/RF_data1_undersampling.ipynb
+++ b/RF_data1_undersampling.ipynb
@@ -7163,7 +7163,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "id": "568d1600",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from predict_ensemble_and_evaluate import save_to_pickle, load_from_pickle\n",
+    "from predict_ensemble_and_evaluate import predict_ensemble_and_evaluate\n",
+    "from predict_ensemble_and_evaluate import plot_roc_comparison\n",
+    "from predict_ensemble_and_evaluate import make_curve_monotonic\n",
+    "\n",
+    "# Save the data\n",
+    "save_to_pickle(list_folds_best_models, list_folds_weighted_clfs, results_original_roc, test_loader, filename='pickle/RF_data1_undersampling.pkl')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaed00a0",
+   "metadata": {},
+   "source": [
+    "# Load pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5965cd58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from predict_ensemble_and_evaluate import save_to_pickle, load_from_pickle\n",
+    "from predict_ensemble_and_evaluate import predict_ensemble_and_evaluate\n",
+    "from predict_ensemble_and_evaluate import plot_roc_comparison\n",
+    "from predict_ensemble_and_evaluate import make_curve_monotonic\n",
+    "\n",
+    "# Load the data\n",
+    "list_folds_best_models, list_folds_weighted_clfs, results_original_roc, test_loader = load_from_pickle(filename='pickle/RF_data1_undersampling.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a2787fca",
    "metadata": {},
    "outputs": [
@@ -7200,7 +7242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7a9ef57f",
    "metadata": {},
    "outputs": [
@@ -7617,7 +7659,7 @@
     }
    ],
    "source": [
-    "\n",
+    "import numpy as np\n",
     "\n",
     "# --- Loop through all the FPR values to generate the ensemble ROC curve ---\n",
     "\n",
@@ -7669,6 +7711,11 @@
     "            'model': 'end', 'fpr': 1.0, 'tpr': 1.0, 'threshold': 0.0\n",
     "        })\n",
     "\n",
+    "    # --- NEW: Post-process the lists to make them monotonic ---\n",
+    "print(\"\\n--- Filtering curves to be monotonic ---\")\n",
+    "ensemble_results_soft = make_curve_monotonic(ensemble_results_soft)\n",
+    "ensemble_results_hard = make_curve_monotonic(ensemble_results_hard)\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -7676,7 +7723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "8af6ee45",
    "metadata": {},
    "outputs": [
