UCI BreastCancer Undersampling

--- a/Logistic_data1_undersampling.ipynb
+++ b/Logistic_data1_undersampling.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a8c3deb3",
    "metadata": {},
    "outputs": [],
@@ -699,7 +699,13 @@
       "============================================================\n",
       "--- STARTING STAGE 8 FOR SAMPLE RATIO: 0.006170294773722182 ---\n",
       "============================================================\n",
-      "Original sample ratio (positive:negative): 1.02\n",
+      "Original sample ratio (positive:negative): 1.02\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "============================================================\n",
       "--- STARTING STAGE 9 FOR SAMPLE RATIO: 0.006947935020032003 ---\n",
       "============================================================\n",
@@ -18313,7 +18319,7 @@
        "  'name': 'Logistic Regression',\n",
        "  'auc': np.float64(0.4653666666666667),\n",
        "  'model': LogisticRegression()},\n",
-       " 'test_loader': <torch.utils.data.dataloader.DataLoader at 0x7658c08defc0>}"
+       " 'test_loader': <torch.utils.data.dataloader.DataLoader at 0x74364c358260>}"
       ]
      },
      "execution_count": 12,
@@ -18343,7 +18349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "9a43e7cd",
    "metadata": {},
    "outputs": [
@@ -18375,7 +18381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "7a9ef57f",
    "metadata": {},
    "outputs": [
@@ -18422,7 +18428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "3873fb51",
    "metadata": {},
    "outputs": [
@@ -18443,7 +18449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "32a10a07",
    "metadata": {},
    "outputs": [
