--- a/Logistic_data1_weighted.ipynb
+++ b/Logistic_data1_weighted.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a8c3deb3",
    "metadata": {},
    "outputs": [],
@@ -21152,7 +21152,7 @@
        "  'name': 'Logistic Regression',\n",
        "  'auc': np.float64(0.4653666666666667),\n",
        "  'model': LogisticRegression()},\n",
-       " 'test_loader': <torch.utils.data.dataloader.DataLoader at 0x7fe2eac82cc0>}"
+       " 'test_loader': <torch.utils.data.dataloader.DataLoader at 0x710784d8c110>}"
       ]
      },
      "execution_count": 10,
@@ -21182,7 +21182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "4dd32937",
    "metadata": {},
    "outputs": [
@@ -21214,7 +21214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "7a9ef57f",
    "metadata": {},
    "outputs": [
@@ -21261,7 +21261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "f98fdfff",
    "metadata": {},
    "outputs": [
@@ -21282,7 +21282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "9e3a7c7b",
    "metadata": {},
    "outputs": [
